@@ -453,7 +453,7 @@ void *demux_ac3_init_plugin (xine_t *xine, void *data) {
   this->demux_class.open_plugin     = open_plugin;
   this->demux_class.description     = N_("Raw AC3 demux plugin");
   this->demux_class.identifier      = "AC3";
-  this->demux_class.mimetypes       = NULL;
+  this->demux_class.mimetypes       = "audio/ac3: ac3: Dolby Digital audio;";
   this->demux_class.extensions      = "ac3";
   this->demux_class.dispose         = default_demux_class_dispose;
 
