@@ -83,6 +83,10 @@ xine-lib (1.1.19) 2010-??-??
   * Report stream buffer stats to the application.
   * Recognise and handle the WebM container format.
     (VP8 video is not yet supported.)
+  * Recognise ScreamTracker 2 & 3 files.
+  * Fix playback of the first file handled by the modplug demuxer.
+  * Refuse to build with known-broken libmodplug (0.8.8).
+    http://bugs.debian.org/588465
 
 xine-lib (1.1.18.1) 2010-03-06
   * Oops. compat.c (for DXR3 support) was omitted.
